--- a/client/src/components/Loader/index.scss
+++ b/client/src/components/Loader/index.scss
@@ -8,7 +8,7 @@
     align-items: center;
     width: 100vw;
     height: 100vh;
-    background-color: #fff;
+    background: linear-gradient(45deg, var(--color-orange), #fff);
     transition: all .5s;
 
     &_wrapper {
@@ -57,7 +57,16 @@
 }
 
 .full-screen_loader-hide {
-    z-index: -10000;
-    opacity: 0;
-    display: none;
+    animation: fadeOut .5s ease 1 forwards;
+
+    @keyframes fadeOut {
+        0% {
+            opacity: 1;
+        } 99% {
+            opacity: 0;
+        } 100% {
+            opacity: 0;
+            display: none;
+        }
+    }
 }
