--- a/client/src/components/Loader/index.scss
+++ b/client/src/components/Loader/index.scss
@@ -66,7 +66,7 @@
             opacity: 0;
         } 100% {
             opacity: 0;
-            display: none;
+            z-index: -10000;
         }
     }
 }
