--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -4,6 +4,7 @@
   --font-regular:  -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 
   --color-orange: #FF6900;
+  --color-light: #F2A736;
 }
 
 * {
