--- a/client/src/containers/AdminPage/Products/Categories/index.scss
+++ b/client/src/containers/AdminPage/Products/Categories/index.scss
@@ -3,6 +3,7 @@
     list-style-type: none;
     padding: 1rem 0;
     position: sticky;
+    z-index: 1000;
     top: 0;
     background-color: #fff;
 
