--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -2,6 +2,7 @@
   --font-open: 'Open Sans', sans-serif;
   --font-raleway: 'Raleway', sans-serif;
   --font-regular:  -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  --font-roboto: 'Roboto', sans-serif;
 
   --color-orange: #FF6900;
   --color-light: #F2A736;
@@ -15,4 +16,5 @@
 
 body {
   font-size: 16px;
+  height: 400vh;
 }
