main-page-header

--- a/client/src/containers/MainNavbar/index.scss
+++ b/client/src/containers/MainNavbar/index.scss
@@ -1,82 +1,81 @@
-.main-navbar {
-    width: 960px;
-    margin: 0 auto;
-    overflow: hidden;
-    position: relative;
-
-    &_header {
+.main-page_header {
+    width: 100%;
+    
+    .wrapper {
+        width: 960px;
+        margin: 0 auto;
         display: flex;
+        justify-content: space-between;
         align-items: center;
-        padding: 1em 0;
-        font-family: var(--font-open);
+        padding: 1rem 0;
 
-        &_brand {
-            margin-right: 3em;
+        a {
+            margin-right: 2em;
             display: flex;
-            align-items: center;
+            align-items: center; 
             text-decoration: none;
-            color: #000;
+            color: rgba(0, 0, 0, 0.644);
             font-weight: bold;
+            font-family: var(--font-open);
             font-size: 1.5em;
-            font-family: var(--font-roboto);
 
             img {
-                width: 3em;
-                height: 3em;
                 margin-right: 1em;
+                width: 3rem;
+                height: 3rem;
             }
         }
 
-        &_promotion {
-            font-size: 1em;
-            font-weight: 550;
-            font-family: var(--font-raleway);
-    
+        .promotion {
+            font-family: var(--font-poppins);
+            font-weight: 600;
+            color: rgba(0, 0, 0, 0.726);
+
             span {
-                opacity: .5;
+                opacity: .7;
             }
         }
     }
+}
 
-    &_nav {
+.main-page_navbar {
+    padding: .5rem;
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    width: 100%;
+    font-family: var(--font-open);
+    background-color: #fff;
+
+    .wrapper {
+        width: 960px;
+        margin: 0 auto;
         overflow: hidden;
 
-        &_wrapper {
-            padding: 1rem 0;
+        ul {
+            transition: transform .4s;
+            transform: translateX(-4em);
+            list-style-type: none;
             display: flex;
             align-items: center;
-            transition: transform .4s;
-            transform: translateX(-2.5em);
 
-            img {
-                width: 2.5em;
-                height: 2.5em;
-            }
-            
-            &_items {
-                list-style-type: none;
-                display: flex;
-
-                li {
-                    margin: 0 1em;
-                    font-size: 1em;
-                    font-family: var(--font-roboto)
+            .logo {
+                img {
+                    width: 3rem;
+                    height: 3rem;
                 }
             }
+
+            li {
+                cursor: pointer;
+                color: rgba(0, 0, 0, 0.562);
+                font-weight: 600;
+                margin: 0 1rem;
+            }
         }
-    }
 
-    .nav-sticky {
-        position: fixed;
-        top: 0;
-        width: 960px;
-
-        .main-navbar_nav_wrapper {
+        .show-logo {
             transform: translateX(0);
-        }
-
-        @media screen and (max-width: 960px) {
-            width: 100%;
         }
     }
 }
