--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -3,6 +3,7 @@
   --font-raleway: 'Raleway', sans-serif;
   --font-regular:  -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   --font-roboto: 'Roboto', sans-serif;
+  --font-poppins: 'Poppins', sans-serif;
 
   --color-orange: #FF6900;
   --color-light: #F2A736;
@@ -16,5 +17,4 @@
 
 body {
   font-size: 16px;
-  height: 400vh;
 }
