--- a/client/src/containers/Cart/index.scss
+++ b/client/src/containers/Cart/index.scss
@@ -7,19 +7,21 @@
     top: calc(100% + 10px);
     right: calc((100% - 960px) / 2);
     border-radius: 20px;
-    opacity: 0;
-    animation: fadeIn .5s ease 1 forwards;
     transition: opacity .5s;
-    
-    @keyframes fadeIn {
-        from { opacity: 0; }
-        to { opacity: 1; }
+
+    @media screen and (max-width: 1000px) {
+        right: 10px;
+        font-size: 14px;
     }
 
+    @media screen and (max-width: 350px) {
+        width: 260px;
+    }
+    
     &_order-button {
         display: block;
         width: 100%;
-        padding: .5rem 0;
+        padding: .5em 0;
         text-align: center;
         text-decoration: none;
         color: #fff;
@@ -35,7 +37,7 @@
         overflow-y: auto;
 
         &::-webkit-scrollbar {
-            width: .5rem;
+            width: .5em;
             background-color: #fff;
         }
 
@@ -44,21 +46,21 @@
         }
 
         &::-webkit-scrollbar-thumb {
-            margin-top: 1rem;
+            margin-top: 1em;
             border-radius: 50px;
             background-color: var(--color-orange);
         }
 
         &_cart-item {
             position: relative;
-            margin: .5rem 0;
+            margin: .5em 0;
             display: flex;
             align-items: center;
             
             img {
                 width: 50px;
                 height: 50px;
-                margin-right: .5rem;
+                margin-right: .5em;
             }
 
             .information {
@@ -91,7 +93,7 @@
         display: flex;
         justify-content: space-between;
         border-top: 1px solid #ccc;
-        padding: 1rem;
+        padding: 1em;
         padding-bottom: 0;
         font-family: var(--font-roboto);
     }
