--- a/client/src/containers/AdminPage/index.scss
+++ b/client/src/containers/AdminPage/index.scss
@@ -2,6 +2,7 @@
     .admin-page_content {
         width: 1024px;
         margin: 0 auto;
+        padding: 1rem;
 
         @media screen and (max-width: 1024px) {
             width: 100%;
