--- a/client/src/containers/MainNavbar/index.scss
+++ b/client/src/containers/MainNavbar/index.scss
@@ -77,8 +77,8 @@
 
             .logo {
                 img {
-                    width: 3rem;
-                    height: 3rem;
+                    width: 3em;
+                    height: 3em;
                 }
             }
 
@@ -86,19 +86,15 @@
                 cursor: pointer;
                 color: rgba(0, 0, 0, 0.562);
                 font-weight: 600;
-                margin: 0 1rem;
+                margin: 0 1em;
             }
 
-
-            @media screen and (max-width: 730px) {
-                display: none;
-            }
         }
 
         .cart {
             color: rgba(255, 255, 255, 0.836);
             background-color: var(--color-orange);
-            padding: .5rem 1rem;
+            padding: .5em 1em;
             font-family: var(--font-roboto);
             font-weight: 600;
             cursor: pointer;
@@ -113,6 +109,26 @@
 
         .show-logo {
             transform: translateX(0);
+        }
+    }
+
+    @media screen and (max-width: 730px) {
+        padding: 0;
+        box-shadow: none;
+
+        .wrapper {
+            ul {
+                display: none;
+            }
+    
+            .cart {
+                display: flex;
+                justify-content: center;
+                position: fixed;
+                bottom: 0;
+                width: 100%;
+                border-radius: 0;
+            }
         }
     }
 
